--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "scripts": {
     "test": "jest",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "dev-docker": "npm run docker-up & nodemon server.js",
+    "docker-up-build": "docker-compose  -f Docker/docker-compose.yml up --build",
+    "docker-up": "docker-compose  -f Docker/docker-compose.yml up",
+    "docker-down": "docker-compose down"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +22,7 @@
     "prettier": "^3.3.1"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "express": "^4.21.2",
     "jest": "^29.7.0",
     "socket.io": "^4.8.1"
